fixed input fields having the wrong fonts.

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 /*@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';*/
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 /*@import '~@angular/material/prebuilt-themes/purple-green.css';*/
+
+.mat-input-container{
+  font-size: 16px;
+}
